<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/itemsColor"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_margin="5dp"
        android:id="@+id/name" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:layout_gravity="end"
        android:id="@+id/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/itemsColor"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:id="@+id/price" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/itemsColor"
        android:text="@string/quantity"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:id="@+id/quantity" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:id="@+id/sale"
        android:text="@string/sale"/>

</LinearLayout>